--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,18 @@
-
+altair==4.2.0
+charset_normalizer==2.0.4
+fancyimpute==0.7.0
+hydralit_components==1.0.10
+matplotlib==3.5.1
+numpy==1.21.5
+pandas==1.4.3
+pandas_profiling==3.1.0
+Pillow==9.2.0
+plotly==5.9.0
+requests==2.28.1
+scikit_learn==1.1.2
+statsmodels==0.13.2
+streamlit==1.11.1
+streamlit_lottie==0.0.3
+streamlit_option_menu==0.3.2
+streamlit_pandas_profiling==0.1.3
+xgboost==1.6.1
